UI: Increase Blog title size

--- a/pages/posts/index.mdx
+++ b/pages/posts/index.mdx
@@ -39,6 +39,6 @@ export const getStaticProps = async () => {
   }
 }
 
-<h1>Blog</h1>
+<h1 style={{ fontSize: '3rem', fontWeight: 'bold', marginBottom: '2rem', textAlign: 'center' }}>Blog</h1>
 
 <PostList posts={props.posts} />
