Fix: Use JS expression for email in md to prevent autolink

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -17,7 +17,7 @@ import styles from '../styles/home.module.css'
         </li>
         <li>
           <span className={styles.icon}>✉️</span> 
-          <a href="mailto:xiaozhizhu1994@gmail.com">xiaozhizhu1994@gmail.com</a>
+          <a href="mailto:xiaozhizhu1994@gmail.com">{'xiaozhizhu1994@gmail.com'}</a>
         </li>
         <li>
           <span className={styles.icon}>🎓</span> 
