Fix hydration error in index and typos in posts

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -32,12 +32,12 @@ import styles from '../styles/home.module.css'
 
     <section className={styles.main}>
       <h2 className={styles.sectionTitle}>Biography</h2>
-      <p className={styles.bio}>
+      <div className={styles.bio}>
         My name is Xiaozhi(Alan) Zhu and I’m currently a research scientist at Meta Platform, inc.
         Before joining Meta, I obtained my Ph.D. in <a href="https://acms.nd.edu/" target="_blank" rel="noopener noreferrer">applied and computational math and statistics(ACMS) from University of Notre Dame</a> with <a href="https://www3.nd.edu/~yzhang10/" target="_blank" rel="noopener noreferrer">Prof. Yong-tao Zhang</a> being my advisor.
         At Notre Dame, I had worked on sparse grid methods for PDEs and surrogate model for simulation of fluid dynamics.
         My current research interests focusing on 3D shape generation, VLM, world model,and related topics.
-      </p>
+      </div>
 
       <div style={{ margin: '3rem 0' }}></div>
 
