--- a/public/papers.bib
+++ b/public/papers.bib
@@ -226,3 +226,10 @@
   journal={arXiv preprint arXiv:2208.04202},
   year={2022}
 }
+
+@inproceedings{dosovitskiy2020image,
+  title={An Image is Worth 16x16 Words: Transformers for Image Recognition at Scale},
+  author={Dosovitskiy, Alexey and Beyer, Lucas and Kolesnikov, Alexander and Weissenborn, Dirk and Zhai, Xiaohua and Unterthiner, Thomas and Dehghani, Mostafa and Minderer, Matthias and Heigold, Georg and Gelly, Sylvain and others},
+  booktitle={International Conference on Learning Representations},
+  year={2021}
+}
