--- a/pages/posts/DINO-model.mdx
+++ b/pages/posts/DINO-model.mdx
@@ -341,7 +341,12 @@ The model achieves state-of-the-art results across diverse tasks using simple he
 
 #### 2. Qualitative Capabilities
 *   **PCA Visualization**: Principal Component Analysis of the feature maps shows that *semantic parts* (e.g., bird heads, wheel spokes) are automatically aligned across different images without any supervision.
-*   **Instance Retrieval**: On Oxford/Paris datasets, standard cosine similarity retrieval works out-of-the-box without re-ranking, proving the features are naturally discriminative.
+    
+    <img src="/assets/dinov2-pca.jpg" alt="DINOv2 PCA Visualization" className="w-full rounded-lg border border-gray-200 my-4" />
+
+*   **Instance Retrieval & Matching**: On Oxford/Paris datasets, standard cosine similarity retrieval works out-of-the-box. As shown below, features can match similar semantic parts (wings, wheels) across vastly different poses and styles (e.g., photo vs drawing).
+
+    <img src="/assets/dinov2-matching.jpg" alt="DINOv2 Patch Matching" className="w-full rounded-lg border border-gray-200 my-4" />
 
 ---
 
