feat(blog): Finalize DINOv3 post 'feature-collapse-vs-oversmoothing' with accurate terminology and visual evidence

--- a/public/papers.bib
+++ b/public/papers.bib
@@ -233,3 +233,37 @@
   booktitle={International Conference on Learning Representations},
   year={2021}
 }
+
+@article{darcet2023vision,
+  title={Vision Transformers Need Registers},
+  author={Darcet, Timothée and Oquab, Maxime and Mairal, Julien and Bojanowski, Piotr},
+  journal={arXiv preprint arXiv:2309.16588},
+  year={2023},
+  url={https://arxiv.org/abs/2309.16588}
+}
+
+@article{oquab2025dinov3,
+  title={DINOv3: A Vision Transformer for Every Use Case},
+  author={Oquab, Maxime and Darcet, Timothée and others},
+  journal={arXiv preprint arXiv:2508.10104},
+  year={2025},
+  url={https://arxiv.org/abs/2508.10104}
+}
+
+@inproceedings{xiao2023efficient,
+  title={Efficient Streaming Language Models with Attention Sinks},
+  author={Xiao, Guangxuan and Tian, Yuandong and Chen, Beidi and Han, Song and Lewis, Mike},
+  booktitle={International Conference on Learning Representations},
+  year={2024},
+  url={https://arxiv.org/abs/2309.17453}
+}
+
+@inproceedings{gilmer2017neural,
+  title={Neural Message Passing for Quantum Chemistry},
+  author={Gilmer, Justin and Schoenholz, Samuel S and Riley, Patrick F and Vinyals, Oriol and Dahl, George E},
+  booktitle={International Conference on Machine Learning},
+  pages={1263--1272},
+  year={2017},
+  organization={PMLR},
+  url={https://arxiv.org/abs/1704.01212}
+}
